cmake_minimum_required(VERSION 3.9)
project(zaawansowany_cpp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(zaawansowany_cpp main.cpp week1/main.cpp)
#add_executable(zaawansowany_cpp week2/main.cpp week2/main.cpp week2/Employee.hpp week2/Engineer.hpp week2/Seller.hpp)
add_executable(zaawansowany_cpp week3/main.cpp)