cmake_minimum_required(VERSION 3.9)
project(zaawansowany_cpp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(zaawansowany_cpp main.cpp week1/main.cpp)
#add_executable(zaawansowany_cpp week2/main.cpp week2/main.cpp week2/Employee.hpp week2/Engineer.hpp week2/Seller.hpp)
#add_executable(zaawansowany_cpp week3/main.cpp)
#add_executable(zaawansowany_cpp week4/main_.cpp)
#add_executable(zaawansowany_cpp week5/main.cpp)
#add_executable(zaawansowany_cpp week6/main.cpp week6/kolor.h week6/no_checking_policy.h week6/abort_on_error_policy.h week6/static_table_allocator.h week6/expandable_new_allocator.h)
#add_executable(zaawansowany_cpp week7/main.cpp week7/execution_policies.cpp week7/eliminate_core_dumping.cpp week7/test.cc)
add_executable(zaawansowany_cpp week9/main.cpp)